# cicero_compiler_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  re2compiler.py
.github/workflows/: build_and_test.yaml
Docker/: Dockerfile  build_and_test.sh
Parser/: .gitignore  CMakeLists.txt  README.md
Parser/examples/: 1.txt  3.txt  4.txt  5.txt  6.txt  7.txt
Parser/include/: AST.h  ASTParser.h  MLIRParser.h  MLIRRegexOptimization.h  MatchCharHelper.h  MyGreedyPass.h  RegexDialectWrapper.h  RegexOptimizePass.h
Parser/src/: ASTParser.cpp  MLIRParser.cpp  MLIRRegexOptimization.cpp  RegexDialectWrapper.cpp  ast_dump.cpp  build.sh  main.cpp  mlir_dump.cpp  newmain.cpp  regexLexer.g4  regexParser.g4
Parser/src/antlr-grammar/: regexLexer.g4  regexParser.g4
Parser/src/mlir-dialect/: CMakeLists.txt  RegexOps.td
Parser/src/passes/: MLIRRegexOptimization.cpp  SubRegexPasses.cpp
Parser/src/visitor/: MLIRVisitor.cpp  MLIRVisitor.h  Visitor.cpp  Visitor.h
Parser/tools/: generate_metachar_range.py
include/: CiceroDialectWrapper.h  CiceroMLIRGenerator.h  CiceroPasses.h  DialectWrapper.h  MLIRGenerator.h  Passes.h  SplitFollowers.h  cicero_const.h  cicero_helper.h  cicero_macros.h
src/: CiceroMLIRGenerator.cpp  CiceroPasses.cpp  MLIRGenerator.cpp  Passes.cpp  cicero_helper.cpp  ciceroc.cpp  main.cpp
src/mlir-dialect/: CMakeLists.txt  CiceroDialectWrapper.cpp  CiceroOps.td  DialectWrapper.cpp  Ops.td
src/mlir-dialect/RegexToCiceroConversion/: RegexToCiceroPasses.cpp  RegexToCiceroPasses.h  RegexToCiceroTarget.h
src/tool/: ciceroc-measure.cpp  objdump.cpp
tests/: CMakeLists.txt
tests/data/: generate_csv.py  inputs.txt  regexes.txt
tests/data/CSVParser/: 1.csv  2.csv  3.csv  4.csv
tests/src/: CSVParser.h  compile_and_run.cpp  run_on_simulator.cpp  test_csv_parser.cpp
